--- a/TicketBooking.API/appsettings.json
+++ b/TicketBooking.API/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DUY;Database=TicketBooking;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
